--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -2,6 +2,15 @@
     "suggest.noselect": true,
     "suggest.enablePreselect": false,
     "codeLens.enable": true,
+    "diagnostic.errorSign": "\uf467",
+    "diagnostic.warningSign": "\uf071",
+    "diagnostic.infoSign": "\uf129",
+    "diagnostic.hintSign": "\uf864",
+    "diagnostic.displayByAle": false,
+    "diagnostic.refreshOnInsertMode": false,
+    "diagnostic.checkCurrentLine": true,
+    "diagnostic.virtualTextPrefix": " ❯❯❯ ",
+    "diagnostic.virtualText": true,
     "suggest.completionItemKindLabels": {
         "class": "\uf0e8",
         "color": "\ue22b",
@@ -37,5 +46,16 @@
         "dart",
         "html",
         "javascript"
+    ],
+    "java.configuration.runtimes": [
+        {
+            "name": "JavaSE-11",
+            "path": "/usr/lib64/jvm/java-11-openjdk-11",
+            "default": true
+        },
+        {
+            "name": "JavaSE-1.8",
+            "path": "/home/wenanrong/development/jdk1.8.0_291"
+        }
     ]
 }
