--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,16 +1,5 @@
 {
-  "suggest.noselect": true,
-  "suggest.enablePreselect": false,
-  "codeLens.enable": true,
-  "diagnostic.errorSign": "\uf467",
-  "diagnostic.warningSign": "\uf071",
-  "diagnostic.infoSign": "\uf129",
-  "diagnostic.hintSign": "\uf864",
-  "diagnostic.displayByAle": false,
-  "diagnostic.refreshOnInsertMode": false,
-  "diagnostic.checkCurrentLine": true,
-  "diagnostic.virtualTextPrefix": " ❯❯❯ ",
-  "diagnostic.virtualText": true,
+  "coc.preferences.semanticTokensHighlights": false,
   "coc.preferences.enableFloatHighlight": true,
   "coc.preferences.snippetStatusText": "Ⓢ ",
   "coc.preferences.extensionUpdateCheck": "daily",
@@ -19,6 +8,8 @@
   "coc.source.buffer.firstMatch": false,
   "coc.source.syntax.firstMatch": false,
   "suggest.detailMaxLength": 60,
+  "suggest.noselect": true,
+  "suggest.enablePreselect": false,
   "suggest.triggerAfterInsertEnter": true,
   "suggest.autoTrigger": "always",
   "suggest.timeout": 5000,
@@ -55,6 +46,57 @@
     "value": "\uf89f",
     "variable": "\ue71b"
   },
+  "explorer.file.column.indent.indentLine": true,
+  "explorer.file.showHiddenFiles": true,
+  "explorer.icon.enableNerdfont": true,
+  "explorer.keyMappingMode": "none",
+  "explorer.buffer.showHiddenBuffers": false,
+  "explorer.keyMappings.global": {
+    "u": "nodePrev",
+    "e": "nodeNext",
+    "h": "toggleSelection",
+    "<tab>": "actionMenu",
+    "gl": "expandRecursive",
+    "gh": "collapseRecursive",
+    "i": ["wait", "expandable?", "expand", "open"],
+    "<cr>": ["wait", "expandable?", "cd", "open"],
+    "I": "open:vsplit",
+    "o": ["wait", "expanded?", "collapse", "expand"],
+    "O": "open:tab",
+    "n": "collapse",
+    "l": "gotoParent",
+    "yp": "copyFilepath",
+    "yn": "copyFilename",
+    "yy": "copyFile",
+    "dd": "cutFile",
+    "pp": "pasteFile",
+    "dD": "deleteForever",
+    "a": "addFile",
+    "M": "addDirectory",
+    "cw": "rename",
+    ".": "toggleHidden",
+    "zh": "toggleHidden",
+    "R": "refresh",
+    "?": "help",
+    "q": "quit",
+    "X": "systemExecute",
+    "gd": "listDrive",
+    "f": "search",
+    "F": "searchRecursive",
+    "B": "gotoSource:file",
+    "b": "gotoSource:buffer",
+    "[[": "sourcePrev",
+    "]]": "sourceNext",
+    "[d": "diagnosticPrev",
+    "]d": "diagnosticNext",
+    "[c": "gitPrev",
+    "]c": "gitNext",
+    "<<": "gitStage",
+    ">>": "gitUnstage"
+  },
+  "flutter.openDevLogSplitCommand": "botright 12split",
+  "flutter.lsp.initialization.onlyAnalyzeProjectsWithOpenFiles": false,
+  "flutter.trace.server": "off",
   "coc.preferences.formatOnSaveFiletypes": [
     "javascript",
     "typescript",
@@ -72,8 +114,12 @@
   "java.configuration.runtimes": [
     {
       "name": "JavaSE-11",
-      "path": "/usr/lib64/jvm/java-11-openjdk-11",
+      "path": "/home/wenanrong/development/jdk-11.0.11",
       "default": true
+    },
+    {
+      "name": "JavaSE-14",
+      "path": "/home/wenanrong/development/jdk-14.0.2"
     },
     {
       "name": "JavaSE-1.8",
